[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/SceneScripts/MazeHexagon.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/MazeWall.png" type="Texture" id=2]
[ext_resource path="res://Scripts/SceneScripts/Level.gd" type="Script" id=3]
[ext_resource path="res://Scripts/SceneScripts/MazeSquare.gd" type="Script" id=4]
[ext_resource path="res://Assets/Images/HexagonSides.png" type="Texture" id=5]
[ext_resource path="res://Scripts/SceneScripts/MazeTriangle.gd" type="Script" id=6]
[ext_resource path="res://Assets/Images/TriangleSides.png" type="Texture" id=7]
[ext_resource path="res://Assets/Images/OctagonSides.png" type="Texture" id=8]
[ext_resource path="res://Scripts/SceneScripts/MazeOctagon.gd" type="Script" id=9]
[ext_resource path="res://Assets/Images/SquareSides.png" type="Texture" id=10]

[sub_resource type="TileSet" id=1]
0/name = "Maze Wall"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 8, 8 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="Level" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="CanvasLayer" parent="."]
layer = -10

[node name="ColorRect" type="ColorRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.172549, 0.172549, 0.172549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.25, 0.25 )

[node name="MazeSquare" type="Node2D" parent="."]
modulate = Color( 0.270588, 0.490196, 0.913725, 1 )
script = ExtResource( 4 )

[node name="TileMap" type="TileMap" parent="MazeSquare"]
tile_set = SubResource( 1 )
cell_size = Vector2( 8, 8 )
format = 1

[node name="MazeHexagon" type="Node2D" parent="."]
visible = false
modulate = Color( 0.270588, 0.490196, 0.913725, 1 )
script = ExtResource( 1 )
size = Vector2( 15, 13 )

[node name="Hexagons" type="Node2D" parent="MazeHexagon"]

[node name="Hexagon" type="Node2D" parent="MazeHexagon"]

[node name="0" type="Sprite" parent="MazeHexagon/Hexagon"]
texture = ExtResource( 5 )
hframes = 7
frame = 1

[node name="1" type="Sprite" parent="MazeHexagon/Hexagon"]
texture = ExtResource( 5 )
hframes = 7
frame = 2

[node name="2" type="Sprite" parent="MazeHexagon/Hexagon"]
texture = ExtResource( 5 )
hframes = 7
frame = 3

[node name="3" type="Sprite" parent="MazeHexagon/Hexagon"]
texture = ExtResource( 5 )
hframes = 7
frame = 4

[node name="4" type="Sprite" parent="MazeHexagon/Hexagon"]
texture = ExtResource( 5 )
hframes = 7
frame = 5

[node name="5" type="Sprite" parent="MazeHexagon/Hexagon"]
texture = ExtResource( 5 )
hframes = 7
frame = 6

[node name="MazeTriangle" type="Node2D" parent="."]
visible = false
modulate = Color( 0.270588, 0.490196, 0.913725, 1 )
script = ExtResource( 6 )
size = Vector2( 25, 15 )

[node name="Triangles" type="Node2D" parent="MazeTriangle"]

[node name="Triangle" type="Node2D" parent="MazeTriangle"]

[node name="0" type="Sprite" parent="MazeTriangle/Triangle"]
texture = ExtResource( 7 )
hframes = 4
frame = 1

[node name="1" type="Sprite" parent="MazeTriangle/Triangle"]
texture = ExtResource( 7 )
hframes = 4
frame = 2

[node name="2" type="Sprite" parent="MazeTriangle/Triangle"]
texture = ExtResource( 7 )
hframes = 4
frame = 3

[node name="MazeOctagon" type="Node2D" parent="."]
visible = false
modulate = Color( 0.270588, 0.490196, 0.913725, 1 )
script = ExtResource( 9 )

[node name="Shapes" type="Node2D" parent="MazeOctagon"]

[node name="Octagon" type="Node2D" parent="MazeOctagon"]

[node name="0" type="Sprite" parent="MazeOctagon/Octagon"]
texture = ExtResource( 8 )
hframes = 9
frame = 1

[node name="1" type="Sprite" parent="MazeOctagon/Octagon"]
texture = ExtResource( 8 )
hframes = 9
frame = 2

[node name="2" type="Sprite" parent="MazeOctagon/Octagon"]
texture = ExtResource( 8 )
hframes = 9
frame = 3

[node name="3" type="Sprite" parent="MazeOctagon/Octagon"]
texture = ExtResource( 8 )
hframes = 9
frame = 4

[node name="4" type="Sprite" parent="MazeOctagon/Octagon"]
texture = ExtResource( 8 )
hframes = 9
frame = 5

[node name="5" type="Sprite" parent="MazeOctagon/Octagon"]
texture = ExtResource( 8 )
hframes = 9
frame = 6

[node name="6" type="Sprite" parent="MazeOctagon/Octagon"]
texture = ExtResource( 8 )
hframes = 9
frame = 7

[node name="7" type="Sprite" parent="MazeOctagon/Octagon"]
texture = ExtResource( 8 )
hframes = 9
frame = 8

[node name="Square" type="Node2D" parent="MazeOctagon"]
position = Vector2( 21, 0 )

[node name="0" type="Sprite" parent="MazeOctagon/Square"]
texture = ExtResource( 10 )
hframes = 4

[node name="1" type="Sprite" parent="MazeOctagon/Square"]
texture = ExtResource( 10 )
hframes = 4
frame = 1

[node name="2" type="Sprite" parent="MazeOctagon/Square"]
texture = ExtResource( 10 )
hframes = 4
frame = 2

[node name="3" type="Sprite" parent="MazeOctagon/Square"]
texture = ExtResource( 10 )
hframes = 4
frame = 3
